2.1.39 (unreleased)
-------------------

- Nothing changed yet.


2.1.38 (2015-01-28)
-------------------

- fix quality reports to handle unicode properly [amleczko]


2.1.37 (2015-01-24)
-------------------

- add contract to all time entries groupby [amleczko]


2.1.36 (2014-10-06)
-------------------

- update quality reports [amleczko]


2.1.35 (2014-08-04)
-------------------

- fix UI / permissions for customer [amleczko]


2.1.34 (2014-07-16)
-------------------

- change logic in quality reports [amleczko]


2.1.33 (2014-07-08)
-------------------

- new report for last 1000 hours [amleczko]
- small fixes to previous reports [amleczko]


2.1.32 (2014-07-07)
-------------------

- quality report round down to 1 decimal [amleczko]


2.1.31 (2014-07-03)
-------------------

- fix add time entry modal dialog [amleczko]
- fix report index [amleczko]
- show all projects in report, not only active [amleczko]
- fix json export from reports [amleczko]


2.1.30 (2014-07-03)
-------------------

- fix project wizard form to avoid creation empty tickets [amleczko]
- new quality report: we vs. customer [amleczko]
- searchable milestones [amleczko]
- use dismax parser [amleczko]
- integrate sql search in solr [amleczko]
- fix transaction handling when working with trac [amleczko]
- make sure contract field is visible and required [amleczko]
- add filters to time entries migrate [amleczko]
- fix bug with multi schema select [amleczko]
- cleanup newrelic [amleczko]
- fix bug in fastticketing [amleczko]
- fix bug in wizard [amleczko]

2.1.20 (2014-02-05)
-------------------

- fix paths [amleczko]
- remove outstanding tickets [amleczko]
- fix icons [amleczko]
- add user stats [amleczko]
- add default form actions [amleczko]
- simplify angularjs integration [amleczko]
- fix redis pub/sub [amleczko]
- include feedly notifications [amleczko]
- add redis kanbanboard support [amleczko]
- fixes to kanbanboard [amleczko]
- performance fixes for my_time_entries report [amleczko]