@@ -1,7 +1,8 @@
 2.1.39 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- add open by customer field to quality reports [amleczko]
+- refactor quality reports and remove pivoat tables [amleczko]
 
 
 2.1.38 (2015-01-28)
